--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,11 @@
 html {
 	min-height: 100%;
-	max-width: 980px;
+	max-width: 100%;
+	padding: 0%;
+	width: 100%;
 }
 header {
+	width: auto;
 	height: 80px;
 	background: white;
 	position: relative;
@@ -32,11 +35,12 @@ ul {
 	align-items: center;
 	justify-content: center;
 	padding: 5px;
+
 }
 body {
 	position: relative;
 	min-height: 100%;
-
+	background-image: url('Bacsic-Portfolio/assets/images/backgroundImage.jpg');
 
 }
 .contentHeader {
@@ -99,15 +103,45 @@ body {
 footer {
 	width: 100%;
 	position: absolute;
-	top: 1250%;
+	top: 1000%;
 	height: 80px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	background-color: #666666;
 	border-top: 5px #00AFA8 solid;
+	
 }
 #copyright {
 	color: white;
 }
+#firstname, #lastname {
+	margin: auto;
+	width: 390px;
+	background-color: papayawhip;
+}
+#FormMessage {
+	margin: auto;
+	width: 390px;
+	height: 50px;
+	background-color: papayawhip;
+}
+#submitButton {
+	width: 10em;
+	background-color: #87CEEB;
+}
 
+
+.ContactHeader {
+	margin: auto;
+	max-width: 360px;
+	padding: 30px 30px 20px 0px;
+	color: #00AFA8;
+	border-bottom: 2px #DDDDDD solid;
+	text-align: center;
+}
+.ContactForm {
+	margin: auto;
+	max-width: 420px;
+	padding: 10px 10px 10px 10px;
+}
