--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,9 @@ html {
     min-height: 100%;
 
 }
+a{
+    text-decoration: none;
+}
 
 body {
     background-image: url("../images/backgroundImage.jpg");
@@ -19,8 +22,13 @@ header {
     position: relative;
     border-bottom: 2px #CCCCCC solid;
 }
+#wrapper {
+    margin: auto;
+    width: 960px;
+}
 
 #name {
+    float: left;
     background: #4aaaa5;
     color: white;
     position: absolute;
@@ -30,7 +38,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 28px;
+    font-size: 22px;
 }
 
 
@@ -182,7 +190,9 @@ button:hover {
     max-width: 420px;
     padding: 10px 10px 10px 10px;
 }
-
+#portfolioHeader{
+    font-size: 28px;
+}
 #Portfolio {
     width: 690px;
 }
